[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/ui/hud/gui_laterals.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/ethnocentric rg.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_2.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_5.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_1.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_0.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_3.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/hud/extras/hp_bar_4.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/hud/extras/gui_bar_marco_short.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/hud/extras/gui_bar_process.png" type="Texture" id=16]
[ext_resource path="res://game/hud/GUI.gd" type="Script" id=17]

[sub_resource type="DynamicFont" id=1]
size = 23
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="AnimatedTexture" id=2]
flags = 4
frames = 6
pause = true
fps = 6.0
frame_0/texture = ExtResource( 12 )
frame_0/delay_sec = 1.0
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 1.0
frame_2/texture = ExtResource( 3 )
frame_2/delay_sec = 1.0
frame_3/texture = ExtResource( 13 )
frame_3/delay_sec = 1.0
frame_4/texture = ExtResource( 14 )
frame_4/delay_sec = 1.0
frame_5/texture = ExtResource( 10 )
frame_5/delay_sec = 1.0

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0022
margin_top = -3.68405
margin_right = 2.0022
margin_bottom = -3.68408
texture = ExtResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftMenu" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -480.0
margin_right = 470.0
margin_bottom = 490.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginLeftContainer" type="MarginContainer" parent="LeftMenu"]
margin_right = 470.0
margin_bottom = 245.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="InformationSection" type="VBoxContainer" parent="LeftMenu/MarginLeftContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 450.0
margin_bottom = 240.0
size_flags_horizontal = 3

[node name="LevelContainer" type="HBoxContainer" parent="LeftMenu/MarginLeftContainer/InformationSection"]
margin_right = 430.0
margin_bottom = 28.0

[node name="LevelLabel" type="Label" parent="LeftMenu/MarginLeftContainer/InformationSection/LevelContainer"]
margin_right = 213.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Nivel"
align = 2

[node name="NumLevelLabel" type="Label" parent="LeftMenu/MarginLeftContainer/InformationSection/LevelContainer"]
margin_left = 217.0
margin_right = 430.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "ONE"
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="LeftMenu/MarginLeftContainer/InformationSection"]
margin_top = 32.0
margin_right = 430.0
margin_bottom = 42.0
custom_constants/separation = 10

[node name="TimeContainer" type="HBoxContainer" parent="LeftMenu/MarginLeftContainer/InformationSection"]
margin_top = 46.0
margin_right = 430.0
margin_bottom = 74.0
alignment = 1

[node name="TimeLabel" type="Label" parent="LeftMenu/MarginLeftContainer/InformationSection/TimeContainer"]
margin_right = 213.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Time"
align = 2

[node name="NumTimeLabel" type="Label" parent="LeftMenu/MarginLeftContainer/InformationSection/TimeContainer"]
margin_left = 217.0
margin_right = 430.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "00:00"
align = 1
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="LeftMenu/MarginLeftContainer/InformationSection"]
margin_top = 78.0
margin_right = 430.0
margin_bottom = 88.0
custom_constants/separation = 10

[node name="PointsContainer" type="VBoxContainer" parent="LeftMenu/MarginLeftContainer/InformationSection"]
margin_top = 92.0
margin_right = 430.0
margin_bottom = 152.0

[node name="PointsLabel" type="Label" parent="LeftMenu/MarginLeftContainer/InformationSection/PointsContainer"]
margin_right = 430.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Puntos"
align = 1

[node name="NumPointsLabel" type="Label" parent="LeftMenu/MarginLeftContainer/InformationSection/PointsContainer"]
margin_top = 32.0
margin_right = 430.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "0000000000"
align = 1
autowrap = true

[node name="HSeparator3" type="HSeparator" parent="LeftMenu/MarginLeftContainer/InformationSection"]
margin_top = 156.0
margin_right = 430.0
margin_bottom = 166.0
custom_constants/separation = 10

[node name="ScrapContainer" type="VBoxContainer" parent="LeftMenu/MarginLeftContainer/InformationSection"]
margin_top = 170.0
margin_right = 430.0
margin_bottom = 230.0

[node name="ScrapLabel" type="Label" parent="LeftMenu/MarginLeftContainer/InformationSection/ScrapContainer"]
margin_right = 430.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Chatarra  "
align = 1

[node name="NumScrapLabel" type="Label" parent="LeftMenu/MarginLeftContainer/InformationSection/ScrapContainer"]
margin_top = 32.0
margin_right = 430.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "0000000000"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightMenu" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -470.0
margin_top = -480.0
margin_bottom = 490.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginRightContainer" type="MarginContainer" parent="RightMenu"]
margin_right = 470.0
margin_bottom = 153.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20
custom_constants/margin_bottom = 5

[node name="InformationSection" type="VBoxContainer" parent="RightMenu/MarginRightContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 450.0
margin_bottom = 148.0
size_flags_horizontal = 3

[node name="PlayerContainer" type="HBoxContainer" parent="RightMenu/MarginRightContainer/InformationSection"]
margin_right = 430.0

[node name="Stealth" type="TextureRect" parent="RightMenu/MarginRightContainer/InformationSection/PlayerContainer"]
margin_right = 140.0
size_flags_horizontal = 3
stretch_mode = 6

[node name="Bomber" type="TextureRect" parent="RightMenu/MarginRightContainer/InformationSection/PlayerContainer"]
margin_left = 144.0
margin_right = 285.0
size_flags_horizontal = 3
expand = true
stretch_mode = 6

[node name="Interceptor" type="TextureRect" parent="RightMenu/MarginRightContainer/InformationSection/PlayerContainer"]
margin_left = 289.0
margin_right = 430.0
size_flags_horizontal = 3
stretch_mode = 4

[node name="HSeparator" type="HSeparator" parent="RightMenu/MarginRightContainer/InformationSection"]
margin_top = 4.0
margin_right = 430.0
margin_bottom = 14.0
custom_constants/separation = 10

[node name="HPContainer" type="HBoxContainer" parent="RightMenu/MarginRightContainer/InformationSection"]
margin_top = 18.0
margin_right = 430.0
margin_bottom = 46.0
alignment = 1

[node name="HPLabel" type="Label" parent="RightMenu/MarginRightContainer/InformationSection/HPContainer"]
margin_right = 54.0
margin_bottom = 28.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "HP "

[node name="TextureRect" type="TextureRect" parent="RightMenu/MarginRightContainer/InformationSection/HPContainer"]
margin_left = 58.0
margin_right = 430.0
margin_bottom = 28.0
size_flags_horizontal = 3
texture = SubResource( 2 )
stretch_mode = 5

[node name="HSeparator2" type="HSeparator" parent="RightMenu/MarginRightContainer/InformationSection"]
margin_top = 50.0
margin_right = 430.0
margin_bottom = 60.0
custom_constants/separation = 10

[node name="UltimateContainer" type="HBoxContainer" parent="RightMenu/MarginRightContainer/InformationSection"]
margin_top = 64.0
margin_right = 430.0
margin_bottom = 92.0
alignment = 1

[node name="UltimateLabel" type="Label" parent="RightMenu/MarginRightContainer/InformationSection/UltimateContainer"]
margin_right = 166.0
margin_bottom = 28.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Ultimate"

[node name="UltimateProgress" type="TextureProgress" parent="RightMenu/MarginRightContainer/InformationSection/UltimateContainer"]
margin_left = 170.0
margin_right = 430.0
margin_bottom = 28.0
size_flags_horizontal = 3
value = 50.0
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 16 )
nine_patch_stretch = true

[node name="HSeparator3" type="HSeparator" parent="RightMenu/MarginRightContainer/InformationSection"]
margin_top = 96.0
margin_right = 430.0
margin_bottom = 106.0
custom_constants/separation = 10

[node name="DroneContainer" type="HBoxContainer" parent="RightMenu/MarginRightContainer/InformationSection"]
margin_top = 110.0
margin_right = 430.0
margin_bottom = 138.0
alignment = 1

[node name="DroneLabel" type="Label" parent="RightMenu/MarginRightContainer/InformationSection/DroneContainer"]
margin_right = 91.0
margin_bottom = 28.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Dron"

[node name="DroneProgress" type="TextureProgress" parent="RightMenu/MarginRightContainer/InformationSection/DroneContainer"]
margin_left = 95.0
margin_right = 430.0
margin_bottom = 28.0
size_flags_horizontal = 3
value = 50.0
rounded = true
texture_under = ExtResource( 15 )
texture_progress = ExtResource( 16 )
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
